[gd_scene load_steps=8 format=3 uid="uid://bas1lgfq6lfnh"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_k3hac"]
[ext_resource type="PackedScene" uid="uid://c30qmwgrwqr1j" path="res://scenes/plane/plane.tscn" id="2_i5q23"]
[ext_resource type="PackedScene" uid="uid://b8nxilxn2hfn" path="res://scenes/barrier/barrier.tscn" id="3_4ch51"]
[ext_resource type="PackedScene" uid="uid://qo58kgrhj587" path="res://scenes/hud/hud.tscn" id="3_sovpl"]
[ext_resource type="PackedScene" uid="uid://c3gpefthkj1ad" path="res://scenes/pipes/pipes.tscn" id="4_5ol5r"]
[ext_resource type="PackedScene" uid="uid://cgil4ifcbhdhd" path="res://scenes/game_over/game_over.tscn" id="4_mvs7k"]
[ext_resource type="PackedScene" uid="uid://nbtevkfhc8va" path="res://scrolling_bg.tscn" id="7_8xrvu"]

[node name="Game" type="Node2D"]
script = ExtResource("1_k3hac")
pipes_scene = ExtResource("4_5ol5r")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("3_sovpl")]

[node name="GameOver" parent="CanvasLayer" instance=ExtResource("4_mvs7k")]

[node name="Plane" parent="." instance=ExtResource("2_i5q23")]
position = Vector2(68, 422)

[node name="Ceiling" parent="." instance=ExtResource("3_4ch51")]
position = Vector2(1, -20)

[node name="Floor" parent="." instance=ExtResource("3_4ch51")]
position = Vector2(-6, 791)

[node name="PipesHolder" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.3
autostart = true

[node name="TopMarker" type="Marker2D" parent="."]
position = Vector2(511, 357)

[node name="BottomMarker" type="Marker2D" parent="."]
position = Vector2(517, 487)

[node name="ScrollingBg" parent="." instance=ExtResource("7_8xrvu")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
